--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-static-top">
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
-          <li class="hidden-xs">
+          <li class="">
             <%= link_to "/" do %>
               HOME
             <%- end -%>
